--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-    <title>Laboratorio 1</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap">
+    <title>Laboratorio 2</title>
 </head>
 <body>
-
-    <div class="texto">
-        <p> Estategia visual</p>
-        <p>para <span>Social Media</span></p>
-
-    </div>
-
-    <div class="contenedorImagen">
-    <img class="imagenCelu" src="./img/celu.png" alt="">
-    <img class="imagenFondo" src="/img/fondo.JPG" alt="">
+<div>
+    <p class="texto">Unite a las <strong>+5.000 marcas</strong> que ya <strong> confían en nosotros</strong></p>
 </div>
+<div class="contenedorDeImagenes">
+    <img class="img" src="./img/logos-EIT.png" alt="">
+    <img class="img" src="./img/logos-iaia.png" alt="">
+    <img class="img"src="./img/logos-NJ.png" alt="">
+    <img class="img"src="./img/logos-WH.png" alt="">
+    <img class="img" src="./img/logos-wwwapas.png" alt="">
+</div>
+
+
 </body>
 </html>
