--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap">
-    <title>Laboratorio 2</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
+    <title>Laboratorio 3</title>
 </head>
 <body>
-<div>
-    <p class="texto">Unite a las <strong>+5.000 marcas</strong> que ya <strong> confían en nosotros</strong></p>
-</div>
-<div class="contenedorDeImagenes">
-    <img class="img" src="./img/logos-EIT.png" alt="">
-    <img class="img" src="./img/logos-iaia.png" alt="">
-    <img class="img"src="./img/logos-NJ.png" alt="">
-    <img class="img"src="./img/logos-WH.png" alt="">
-    <img class="img" src="./img/logos-wwwapas.png" alt="">
-</div>
-
+    <main>
+        <h2>Animate al coworking</h2>
+        <h1>Le damos lugar<br>a tus ideas</h1>
+        <h3>Alquiler temporal de<strong> espacios de trabajo compartido</strong></h3>
+        <div class="contenedorDeImagen"><img src="./img/img-cowork.png" alt=""></div>
+        <p>Espacio de trabajo es un àrea comun con ubicacion movil<br>sólo trae tu
+        computadora portátil,elegí un lugar disponible<br> y ponte a trabajar</p>
+        </main>
 
 </body>
 </html>
