--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <title>Laboratorio 1</title>
 </head>
+
 <body>
 
     <div class="texto">
-        <p> Estategia visual</p>
-        <p>para <span>Social Media</span></p>
+        <p><strong> Estategia visual</p>
+        <p>para <span>Social Media</span></strong></p>
+
+        <p class="subMenu">Creamos contenido que refleje la personalidad<br>
+            de tu marca.¡Hagamos crecer tu negocio!</p>
 
     </div>
 
     <div class="contenedorImagen">
-    <img class="imagenCelu" src="./img/celu.png" alt="">
-    <img class="imagenFondo" src="/img/fondo.JPG" alt="">
-</div>
+        <img class="imagenFondo" src="/img/fondo.JPG" alt="">
+        <img class="imagenCelu" src="./img/celu.png" alt="">
+        
+    </div>
 </body>
+
 </html>
